[package]
name = "tvws_mac"
description = "A TV white-space MAC"
version = "0.1.0"
edition = "2018"
keywords      = ["IEEE 802.11af", "ECMA-392", "TVWS"]
readme = "hackmd.io/BfJjP6oFRKeWUQIYyTRYtw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
ecma = []
ieee = []