[package]
name = "tvws_mac"
description = "A TV white space MAC implementation"
version = "0.1.0"
edition = "2018"
keywords      = ["IEEE 802.11af", "ECMA-392", "TVWS"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
default = ["ieee80211af"]
ecma392 = []
ieee80211af = []